src/main/java/com/example/devcrew/global/error/exception/BusinessException.java
package com.example.devcrew.global.error.exception;

import com.example.devcrew.global.error.ErrorCode;
import lombok.Getter;

@Getter
public class BusinessException extends RuntimeException {
    private final ErrorCode errorCode;

    public BusinessException(ErrorCode errorCode) {
        super(errorCode.getErrorMessage());
        this.errorCode = errorCode;
    }
}

